--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <nav id="navbar">
             <div class="container">
-                <img src="myself.jpg" alt="Me" width="250" height="250">
+                <img src="myself.png" alt="Me" width="250" height="250">
                 <h1>Hussin A. Abousarya</h1>
                 <ol>
                     <li><a href="https://www.facebook.com/profile.php?id=100006635419420"><i class="fab fa-facebook"></i></a></li>
@@ -30,13 +30,13 @@
         </nav>
         <section id="home">
             <div class="container">
-                <img src="homepage.jpg" width="1500" height="1500">
+                <img src="homepage.png" width="1500" height="1500">
             </div>
         </section>
 
         <section id="about">
             <div class="container">
-                <img src="myself2.jpg" alt="Me"   width="200" height="200"><br>
+                <img src="myself2.png" alt="Me"   width="200" height="200"><br>
                 <h1 style="text-align: center;"> "I am introverted and shy. A little bit happy go lucky but still willing to learn".</h1>
                 <br><br><br><br><br>
                 <ul>
